[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/cube.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/robot_regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/level_1/level_1.gd" type="Script" id=4]
[ext_resource path="res://scenes/level_1/moving_platform.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 26, 1, 26 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 50, 2, 50 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.831373, 0.643137, 0.34902, 1 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 11, 1, 11 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 20, 2, 20 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.219608, 0.231373, 0.239216, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1000, 1, 1000 )

[sub_resource type="DynamicFont" id=5]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Level1" type="Node"]
script = ExtResource( 4 )

[node name="Ground" type="Spatial" parent="."]

[node name="Ground" type="StaticBody" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground/Ground"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Ground2" type="StaticBody" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -52 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Ground2"]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Ground/Ground2"]
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Ground3" type="StaticBody" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, -89 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Ground3"]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Ground/Ground3"]
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Ground4" type="StaticBody" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 63.8365, 7.34687, -89 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Ground4"]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Ground/Ground4"]
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Ground5" type="StaticBody" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 63, 15, -121 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Ground5"]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Ground/Ground5"]
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Ground6" type="StaticBody" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 58.449, 15, -237.978 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/Ground6"]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Ground/Ground6"]
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="MovingPlatform" parent="Ground" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 64, 15, -152 )
_direction = Vector3( 1, 0, 0 )
_distance = 20.0
_speed = 5.0

[node name="MovingPlatform2" parent="Ground" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 75.5221, 15, -173 )
_direction = Vector3( -1, 0, 0 )
_distance = 20.0
_speed = 5.0

[node name="MovingPlatform3" parent="Ground" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54.5221, 15, -195 )
_direction = Vector3( 1, 0, 0 )
_distance = 20.0
_speed = 5.0

[node name="MovingPlatform4" parent="Ground" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54.522, 10, -214 )
_direction = Vector3( 0, 1, 0 )
_distance = 10.0
_speed = 5.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.697034, -0.357718, -0.621435, 0.673747, 0.0301651, 0.738346, -0.245374, -0.933342, 0.262038, 0, 37.5953, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Bottom" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -40, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Bottom"]
shape = SubResource( 4 )

[node name="Cubes" type="Spatial" parent="."]

[node name="Cube" parent="Cubes" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 64, 10, -89 )

[node name="Cube2" parent="Cubes" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 58.5218, 17, -237.458 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CubesLabel" type="Label" parent="UI"]
margin_right = 137.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Cubes: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="cube_obtained" from="Cubes/Cube" to="." method="_on_cube_obtained"]
[connection signal="cube_obtained" from="Cubes/Cube2" to="." method="_on_cube_obtained"]
